# VaultRaider

./: .gitignore  AZURE_SETUP.md  LICENSE  QUICKSTART_ROUTING.md  README.md  ROUTER_SETUP.md  ROUTING.md  THEME_IMPLEMENTATION_SUMMARY.md  THEME_QUICKSTART.md  THEME_SETUP.md  TODO.md  biome.json  build.md  package-lock.json  package.json  react-compiler.config.json  tailwind.config.js  tsconfig.json  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  IMPROVEMENT_ROADMAP.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: azure.rs  azure_auth.rs  config.rs  lib.rs  main.rs  telemetry.rs  user_config.rs
src-tauri/src/azure/: auth.rs  keyvault.rs  keyvaults.rs  resource_group.rs  subscriptions.rs
src-tauri/src/azure/activity_log/: graph.rs  mod.rs  service.rs  types.rs
src-tauri/src/azure/auth/: auth.rs  cli.rs  constants.rs  device_code.rs  interactive.rs  interactive_browser.rs  mod.rs  provider.rs  service.rs  service_principal.rs  state.rs  token.rs  types.rs  user_info.rs
src-tauri/src/azure/http/: client.rs  error.rs  mod.rs  pagination.rs
src-tauri/src/azure/keyvault/: client.rs  constants.rs  mod.rs  secret.rs  service.rs  (+2 more)
src-tauri/src/azure_auth/: auth.rs  cli.rs  constants.rs  device_code.rs  interactive_browser.rs  service_principal.rs  state.rs  token.rs  types.rs  user_info.rs
src-tauri/src/cache/: mod.rs  moka_cache.rs
src-tauri/src/commands/: activity_log.rs  auth.rs  cache.rs  config.rs  keyvault.rs  mod.rs  resource_group.rs  subscription.rs
src-tauri/src/user_config/: constants.rs  disk_io.rs  mod.rs  types.rs
(+113 files in other folders)
